fix the order bug

--- a/class_3_homework_2019140257.ipynb
+++ b/class_3_homework_2019140257.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,36 +732,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "title = \"外媒揭秘苹果A13芯片：比三星华为高通芯片好在哪\"\n",
-    "print(eval(\"word_match('苹果', title) and (('手机' in title) or ('飞机' in title))\"))"
+    "title_list = titles.split()\n",
+    "title_list = set(title_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('苹果' in title) and (('芯片' in title) or ('飞机' in title))\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def word_match(word, title):\n",
     "    result = \"('%s' in %s)\" %(word, title)\n",
@@ -783,19 +766,24 @@
     "        keyword = keyword.replace(word, word_match(word,title = 'title'))\n",
     "        \n",
     "    # 函数返回关键词，和纯词组purewd\n",
-    "    return keyword,purewd\n",
-    "\n",
-    "\n",
-    "ab, c = preval(keyword)\n",
-    "print(ab)\n",
-    "print(eval(ab))"
+    "    return keyword,purewd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\64163\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.835 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -861,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
