--- a/class_3_homework_2019140257.ipynb
+++ b/class_3_homework_2019140257.ipynb
@@ -765,29 +765,19 @@
     "    for word in purewd:\n",
     "        keyword = keyword.replace(word, word_match(word,title = 'title'))\n",
     "        \n",
-    "    # 函数返回关键词，和纯词组purewd\n",
+    "    # 函数返回替换处理后的关键词，和不含连接词的纯词组purewd\n",
     "    return keyword,purewd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache C:\\Users\\64163\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 0.835 seconds.\n",
-      "Prefix dict has been built succesfully.\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "怼完<span style=\"color:red\">苹果</span>怼<span style=\"color:red\">三星</span>，刚发了Mate30的余承东依然要"
+       "一边倒！中国<span style=\"color:red\">女排</span>3-0横扫<span style=\"color:red\">美国</span>取七连胜"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -799,7 +789,7 @@
     {
      "data": {
       "text/html": [
-       "外媒揭秘<span style=\"color:red\">苹果</span>A13<span style=\"color:red\">芯片</span>：比<span style=\"color:red\">三星</span>华为高通<span style=\"color:red\">芯片</span>好在哪"
+       "<span style=\"color:red\">美国</span>18岁<span style=\"color:red\">少年</span>抽18个月电子烟"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -814,7 +804,7 @@
     "import jieba\n",
     "\n",
     "\n",
-    "keyword = '苹果 and (芯片 or 三星)'\n",
+    "keyword = '美国 and (少年 or 女排)'\n",
     "\n",
     "for title in title_list:\n",
     "    judge, purewd = preval(keyword)\n",
